--- a/src/encoder.csproj
+++ b/src/encoder.csproj
@@ -19,7 +19,7 @@
     <DefaultTargetSchema>IE50</DefaultTargetSchema>
     <DelaySign>false</DelaySign>
     <OutputType>Exe</OutputType>
-    <RootNamespace>uBizSoft.PRD.FileEncoder</RootNamespace>
+    <RootNamespace>FileEncoder</RootNamespace>
     <RunPostBuildEvent>OnBuildSuccess</RunPostBuildEvent>
     <StartupObject>
     </StartupObject>
